Fix sorting lowercase letters, Fix navigation links alignment

--- a/react-app/src/css/NavComp.css
+++ b/react-app/src/css/NavComp.css
@@ -71,6 +71,10 @@
   font-weight: 400;
 }
 
+.nav-links .nav-link {
+  align-self: center;
+}
+
 .nav-link:hover,
 .nav-link:focus {
   border-bottom: 2px solid #454545;
